[package]
name = "rustgit"
description = "Clone, commit, push, all in RAM"
version = "1.0.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
license = "MIT"
repository = "https://github.com/NathanRoyer/rustgit"

[dependencies]
log = "0.4"
sha1 = "0.10.5"
coolssh = "1.1.0"
lmfu = { version = "1.0.3", default-features = false, features = [ "litemap", "hashmap", "arcstr" ] }
miniz_oxide = "0.7.1"
