[package]
name = "rustgit"
description = "Pure-rust Git Client"
version = "1.1.1"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
license = "MIT"
keywords = [ "git", "commit", "push", "clone", "repository" ]
categories = [ "development-tools" ]
repository = "https://github.com/NathanRoyer/rustgit"

[dependencies]
log = "0.4"
sha1 = "0.10.5"
coolssh = "1.2.0"
lmfu = { version = "1.3.1", default-features = false, features = [ "litemap", "hashmap", "arcstr", "json" ] }
miniz_oxide = "0.7.1"
